<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/help"
        android:id="@+id/helpButton"
        android:icon="@drawable/help_icon"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/sortButton"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort_button"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/searchButton"
        android:icon="@drawable/search_icon"
        android:title="@string/search_button"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
</menu>