<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dynamicSizeButton"
        android:icon="@drawable/size_icon"
        android:title="@string/size_button_description"
        app:showAsAction="ifRoom" />
</menu>