<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/openReaderButton"
        android:title="@string/open_reader"
        app:showAsAction="never" />
    <item
        android:id="@+id/saveButton"
        android:icon="@drawable/save_icon"
        android:title="@string/save_button"
        app:showAsAction="ifRoom" />
</menu>