<resources>
    <string name="app_name">Thoughtful Journal</string>
    <string name="fab_description">New Journal Button</string>
    <string name="fab_text">New Journal</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_date">Sample Date</string>
    <string name="sample_journal_text">Sample Journal Text</string>
    <string name="more_button">More Button</string>
    <string name="expand_button_description">Expand Button</string>
    <string name="more_button_description">More Button</string>
    <string name="bold_button_description">Bold Button</string>
    <string name="italic_button_description">Italic Button</string>
    <string name="underline_button_description">Underline Button</string>
    <string name="size_button_description">Text Size</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="save_button">Save</string>
    <string name="sort_button">Sort</string>
    <string name="search_button">Search</string>
    <string name="journal_title_hint">Journal Title</string>
    <string name="save_as_draft">Save as draft?</string>
    <string name="draft_text">DRAFT</string>
    <string name="new_journal_title">New Journal</string>
    <string name="format_string_error">Please highlight some text to apply formatting.</string>
    <string name="delete">Delete</string>
    <string name="open_editor">Open Editor</string>
    <string name="open_reader">Open Reader</string>
    <string name="saveFirstDescription">Save to ensure any edits to this journal are saved.</string>
    <string name="saveFirstTitle">Save before leaving?</string>
    <string name="reader_font_size">Reader Text Size</string>
    <string name="size_slider_description">Slider For Dynamically Changing Reader Font Size</string>
    <string name="done">Done</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="writing_journals">Writing Journals,</string>
    <string name="journal_instructions">To get started, hit the \"New Journal\" button on the home screen. From there you can create a new journal and hit the save button in the top right when you\'re ready to save.</string>
    <string name="reporting_issues">Reporting Issues,</string>
    <string name="reporting_issues_instructions">If you find any issues with the app please let me know at dev.issues.app@gmail.com and I\'d be happy to try to fix them for you. I\'d also be interested in hearing what can be done to improve the app.</string>
    <string name="delete_journal_title">Delete Journal?</string>
    <string name="delete_journal_warning">This journal will be permanently deleted.</string>
</resources>