<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.coulter.thoughtfuljournal.viewmodel.JournalViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:hint="@string/journal_title_hint"
            android:maxWidth="488dp"
            android:minWidth="88dp"
            app:counterEnabled="true"
            app:counterMaxLength="25">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:text="@={viewModel.currentJournal.journal_name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.currentJournal.isDraft}"
                    android:text="@string/save_as_draft" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialogCancelButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/robotobold"
                android:text="@android:string/cancel"
                tools:ignore="ButtonOrder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialogSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/robotobold"
                android:text="@string/save_button"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</layout>